# cenergy

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
src/cenergy3/: __init__.py  core.py
