[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cenergy"  
version = "1.0.0"
description = "This Python library automates the generation of digital 3D urban energy model from open data. We synthesize data from OpenTopography, OpenStreetMap, and Overture Maps in generating 3D models. The rendered model visualizes and contextualizes distribution power grids alongside the built environment and transportation networks."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

authors = [
  { name = "Shiliang Zhang", email = "shiliangz@ieee.org" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "bmi-topography", 
  "osmnx", 
  "geopandas", 
  "rasterio", 
  "matplotlib", 
  "contextily plotly==6.5.0",
  "kaleido==0.2.1",
  "overturemaps",
  "trimesh", 
  "mapbox-earcut", 
  "manifold3d", 
  "triangle"
]

[project.urls]
Homepage = "https://sites.google.com/view/cenergy3/home"
Source   = "https://github.com/slzhang-git/cenergy"
Issues   = "https://github.com/slzhang-git/cenergy/issues"
